<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HelloCharts</string>
    <string name="action_about">About</string>
    <string name="title_activity_line_chart">LineChartActivity</string>
    <string name="title_activity_column_chart">ColumnChartActivity</string>
    <string name="title_activity_pie_chart">PieChartActivity</string>
    <string name="title_activity_bubble_chart">BubbleChartActivity</string>
    <string name="title_activity_preview_line_chart">PreviewLineChartActivity</string>
    <string name="title_activity_preview_column_chart">PreviewColumnChartActivity</string>
    <string name="title_activity_combo_line_column_chart">ComboLineColumnChartActivity</string>
    <string name="title_activity_line_column_dependency">LineColumnDependency</string>
    <string name="title_activity_good_bad">GoodBadActivity</string>
    <string name="title_activity_tempo_chart">TempoChartActivity</string>
    <string name="title_activity_speed_chart">SpeedChartActivity</string>
    <string name="title_activity_view_pager_charts">ViewPagerChartsActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_about">AboutActivity</string>
	<string name="title_activity_automatic_zoom_list_chart">Automatic zooming LineCharts</string>
    <string name="about_version_label">"Library version "</string>
    <string name="about_author">Leszek Wach 2014</string>
    <string name="about_app_icon_content_description">App icon</string>
    <string name="about_go_to_github">Go to GitHub</string>
</resources>