<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="lecho.lib.hellocharts.samples.AboutActivity$PlaceholderFragment" >

        <ImageView
            android:id="@+id/app_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="16dp"
            android:contentDescription="@string/about_app_icon_content_description"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_icon"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <LinearLayout
            android:id="@+id/version_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_name"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/version_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_version_label" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/version_layout"
            android:layout_centerHorizontal="true"
            android:text="@string/about_author" />

        <TextView
            android:id="@+id/go_to_github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/author"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/about_go_to_github"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/selector_text_link" />
    </RelativeLayout>

</ScrollView>